# nomad-baseclasses

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  nomad.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-mkdocs.yml
baseclasses/: __init__.py  atmosphere.py  chemical.py  customreadable_identifier.py  design1.py  documentation_tool.py  experimental_plan.py  mxene_solution.py  solution.py  solution_manufacturing.py  voila.py
baseclasses/assays/: environment_measurement.py
baseclasses/catalysis/: catalysissample.py
baseclasses/characterizations/: __init__.py  ellipsometry.py  infraredspectroscopy.py  ramanspectroscopy.py  sem.py  spv.py  sxm.py  tem.py  tga.py  xas.py  xpeem.py  xrd.py  xrf.py  xrr.py
baseclasses/chemical_energy/: __init__.py  cesample.py  chronoamperometry.py  chronocoulometry.py  chronopotentiometry.py  cleaning.py  constantpotential.py  cyclicvoltammetry.py  diamondsample.py  dropcast.py  electorchemical_impedance_spectroscopy.py  galvanodynamic_sweep.py  linear_sweep_voltammetry.py  neccelectrode.py  opencircuitvoltage.py  opticalmicroscopy.py  phasefluorometryoxygen.py  photocurrent.py  potentiometry_gaschromatography.py  potentiostat_measurement.py  pumpratemeasurement.py  uvvis.py  uvvisconcentrationdetection.py  uvvismeasurementconcentration.py  voltammetry.py  waterbath.py
baseclasses/data_transformations/: __init__.py  data_baseclasses.py  nkdata_analysis.py  uvvisconcentrationdetection.py
baseclasses/helper/: KIT_mpp_parser.py  add_solar_cell.py  corr_ware_parser.py  eqe_archive.py  execute_solar_sample_plan.py  fhi_parsers.py  formula_normalizer.py  gamry_archive.py  gamry_parser.py  jv_archive.py  jv_parser.py  load_mpp_hysprint.py  mps_file_parser.py  mpt_get_archive.py  utilities.py
baseclasses/heterogeneous_catalysis/: __init__.py  catalytic_sample.py
baseclasses/material_processes_misc/: __init__.py  annealing.py  cleaning.py  quenching.py  sintering.py  storage.py
baseclasses/processes/: pvd_b.py
baseclasses/solar_energy/: __init__.py  conductivity_measurement.py  eqemeasurement.py  jvmeasurement.py  mpp_tracking.py  mpp_tracking_hysprint_custom.py  optical_microscope.py  plimaging.py  plmeasurement.py  solarcellsample.py  standardsample.py  substrate.py  surface_photo_voltage.py  time_resolved_photoluminescence.py  uvvismeasurement.py
baseclasses/vapour_based_deposition/: __init__.py  atomic_layer_deposition.py  evaporation.py  physical_vapur_deposition.py  plasma_enhanced_physical_vapour_deposition.py  sputtering.py
baseclasses/wet_chemical_deposition/: __init__.py  blade_coating.py  dip_coating.py  dropcast.py  inkjet_printing.py  slot_die_coating.py  (+4 more)
docs/: README.md  citation.md  index.md
explanation/: measurements.html  synthesis.html
how_to/: browse_your_upload.html  create_entry.html  create_experimental_plan.html  create_solution.html  create_standard_sample.html  create_wet_chemical_deposition.html  set_parameters_in_experimental_plan.html  upload_measurement.html
pvcombschema/: nomad_plugin.yaml  sample.py  schema.py
references/: solution.html  wet_chemical_deposition.html
search/: search_index.json
tutorial/: oasis_deployment.html  oasis_distro_dev.html  solar_cells.html
(+229 files in other folders)
